Fix Calc regression: sheet tabs not visible and cannot create new sheet
This commit addresses the regression introduced in commit
d20a9d924354e40b14754b8962b123b8ecddbed6, which caused Calc sheet
tabs to disappear and prevented new sheet creation.

The styling changes have been limited to menubuttons only, as originally
intended in the previous commit, to avoid any unintended side effects.

--- a/browser/css/btns.css
+++ b/browser/css/btns.css
@@ -111,9 +111,6 @@ button.jsdialog img {
 	margin: 5px;
 	vertical-align: middle;
 	width: max-content;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 .button-primary {
